--- a/nutrition.html
+++ b/nutrition.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
   <!-- Particles.js Script -->
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <!-- Chart.js Script -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <style>
     /* Basic Styling */
@@ -70,29 +72,15 @@
       margin-top: 20px;
     }
 
-    /* Table Styling for Nutritional Info */
-    table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-
-    table th, table td {
-      padding: 10px;
+    /* Pie Chart Styling */
+    .pie-chart-container {
+      margin-top: 30px;
       text-align: center;
-      border: 1px solid #ddd;
     }
 
-    table th {
-      background-color: #333;
-      color: #fff;
-    }
-
-    table tbody tr:nth-child(even) {
-      background-color: #444;
-    }
-
-    table tbody tr:nth-child(odd) {
-      background-color: #333;
+    canvas {
+      max-width: 100%;
+      height: 300px;
     }
   </style>
 </head>
@@ -138,6 +126,11 @@
       </div>
     </section>
 
+    <section class="pie-chart-container">
+      <h2>Nutrition Breakdown (3D Pie Chart)</h2>
+      <canvas id="pie-chart"></canvas>
+    </section>
+
   </div>
 
   <script>
@@ -148,9 +141,17 @@
     const servingSizeContainer = document.getElementById('serving-size-container');
     const servingSizeSelect = document.getElementById('serving-size');
     const nutritionDetails = document.getElementById('nutrition-details');
+    const pieChartCanvas = document.getElementById('pie-chart');
 
     const APP_ID = "b0c02042";  // Your Edamam Application ID
     const APP_KEY = "c85342f02e2ce14196c6818dc0ec0d11";  // Your Edamam Application Key
+
+    let nutritionData = {
+      calories: 0,
+      protein: 0,
+      carbs: 0,
+      fat: 0
+    };
 
     async function fetchFoodData(query) {
       const url = `https://api.edamam.com/api/food-database/v2/parser?app_id=${APP_ID}&app_key=${APP_KEY}&ingr=${encodeURIComponent(query)}`;
@@ -188,70 +189,74 @@
 
     function updateNutritionDetails(food, servingSize) {
       const selectedServing = parseFloat(servingSizeSelect.value);
+      nutritionData = {
+        calories: food.nutrients.ENERC_KCAL * selectedServing,
+        protein: food.nutrients.PROCNT * selectedServing,
+        carbs: food.nutrients.CHOCDF * selectedServing,
+        fat: food.nutrients.FAT * selectedServing
+      };
+
       nutritionDetails.innerHTML = `
         <h3>Nutrition Info (for ${selectedServing} serving(s))</h3>
-        <p><strong>Calories:</strong> ${food.nutrients.ENERC_KCAL * selectedServing} kcal</p>
-        <p><strong>Protein:</strong> ${food.nutrients.PROCNT * selectedServing} g</p>
-        <p><strong>Carbs:</strong> ${food.nutrients.CHOCDF * selectedServing} g</p>
-        <p><strong>Fat:</strong> ${food.nutrients.FAT * selectedServing} g</p>
+        <p><strong>Calories:</strong> ${nutritionData.calories} kcal</p>
+        <p><strong>Protein:</strong> ${nutritionData.protein} g</p>
+        <p><strong>Carbs:</strong> ${nutritionData.carbs} g</p>
+        <p><strong>Fat:</strong> ${nutritionData.fat} g</p>
       `;
+
+      updatePieChart();
+    }
+
+    function updatePieChart() {
+      const chartData = {
+        labels: ['Calories', 'Protein', 'Carbs', 'Fat'],
+        datasets: [{
+          data: [nutritionData.calories, nutritionData.protein, nutritionData.carbs, nutritionData.fat],
+          backgroundColor: ['#FF5733', '#33FF57', '#3357FF', '#FF33A1'],
+          hoverBackgroundColor: ['#FF704D', '#66FF80', '#6699FF', '#FF66B2'],
+          borderColor: '#000',
+          borderWidth: 1
+        }]
+      };
+
+      const options = {
+        responsive: true,
+        plugins: {
+          legend: {
+            position: 'top',
+          },
+          tooltip: {
+            callbacks: {
+              label: function (tooltipItem) {
+                const label = tooltipItem.label;
+                const value = tooltipItem.raw;
+                return `${label}: ${value.toFixed(2)} g`;
+              }
+            }
+          }
+        },
+        rotation: Math.PI / 4, // Creates a 3D-like effect by rotating the chart
+        animation: {
+          animateRotate: true,
+          animateScale: true
+        }
+      };
+
+      new Chart(pieChartCanvas, {
+        type: 'pie',
+        data: chartData,
+        options: options
+      });
     }
 
     searchBtn.addEventListener('click', async () => {
       const query = foodSearchInput.value.trim();
-      if (!query) return;
-      const data = await fetchFoodData(query);
-      if (data.hints && data.hints.length > 0) {
-        displayFoodList(data.hints);
-      } else {
-        alert('No food found!');
+      if (query) {
+        const foodData = await fetchFoodData(query);
+        displayFoodList(foodData.hints);
       }
     });
-  </script>
 
-  <script>
-    particlesJS('particles-js', {
-      "particles": {
-        "number": {
-          "value": 80,
-          "density": { "enable": true, "value_area": 800 }
-        },
-        "color": { "value": "#ffffff" },
-        "shape": {
-          "type": "circle",
-          "stroke": { "width": 0, "color": "#000000" }
-        },
-        "opacity": {
-          "value": 0.5,
-          "random": true,
-          "anim": { "enable": true, "speed": 1, "opacity_min": 0.1, "sync": false }
-        },
-        "size": {
-          "value": 3,
-          "random": true,
-          "anim": { "enable": true, "speed": 4, "size_min": 0.1, "sync": false }
-        },
-        "move": {
-          "enable": true,
-          "speed": 2,
-          "direction": "none",
-          "random": true,
-          "straight": false,
-          "out_mode": "out",
-          "bounce": false,
-          "attract": { "enable": false, "rotateX": 600, "rotateY": 1200 }
-        }
-      },
-      "interactivity": {
-        "detect_on": "canvas",
-        "events": {
-          "onhover": { "enable": true, "mode": "repulse" },
-          "onclick": { "enable": true, "mode": "push" },
-          "resize": true
-        }
-      },
-      "retina_detect": true
-    });
   </script>
 
 </body>
