--- a/nutrition.html
+++ b/nutrition.html
@@ -80,7 +80,31 @@
 
     canvas {
       max-width: 100%;
-      height: 300px;
+      height: 200px; /* Adjust the pie chart size */
+    }
+
+    /* Table Styling */
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 30px;
+    }
+
+    table, th, td {
+      border: 1px solid #333;
+    }
+
+    th, td {
+      padding: 10px;
+      text-align: left;
+    }
+
+    th {
+      background-color: #333;
+    }
+
+    tr:nth-child(even) {
+      background-color: #444;
     }
   </style>
 </head>
@@ -131,6 +155,23 @@
       <canvas id="pie-chart"></canvas>
     </section>
 
+    <!-- Log Table -->
+    <section>
+      <h2>Food Log</h2>
+      <table id="food-log">
+        <thead>
+          <tr>
+            <th>Food</th>
+            <th>Serving Size</th>
+            <th>Calories</th>
+            <th>Time</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Food log entries will go here -->
+        </tbody>
+      </table>
+    </section>
   </div>
 
   <script>
@@ -142,6 +183,7 @@
     const servingSizeSelect = document.getElementById('serving-size');
     const nutritionDetails = document.getElementById('nutrition-details');
     const pieChartCanvas = document.getElementById('pie-chart');
+    const foodLogTable = document.getElementById('food-log').getElementsByTagName('tbody')[0];
 
     const APP_ID = "b0c02042";  // Your Edamam Application ID
     const APP_KEY = "c85342f02e2ce14196c6818dc0ec0d11";  // Your Edamam Application Key
@@ -204,38 +246,34 @@
         <p><strong>Fat:</strong> ${nutritionData.fat} g</p>
       `;
 
-      updatePieChart();
+      updatePieChart(food.label, selectedServing);
     }
 
-    function updatePieChart() {
+    function updatePieChart(foodName, selectedServing) {
       const chartData = {
         labels: ['Calories', 'Protein', 'Carbs', 'Fat'],
         datasets: [{
           data: [nutritionData.calories, nutritionData.protein, nutritionData.carbs, nutritionData.fat],
           backgroundColor: ['#FF5733', '#33FF57', '#3357FF', '#FF33A1'],
-          hoverBackgroundColor: ['#FF704D', '#66FF80', '#6699FF', '#FF66B2'],
-          borderColor: '#000',
-          borderWidth: 1
+          hoverBackgroundColor: ['#FF704D', '#66FF66', '#4D94FF', '#FF66B3']
         }]
       };
 
       const options = {
         responsive: true,
         plugins: {
-          legend: {
-            position: 'top',
-          },
           tooltip: {
             callbacks: {
-              label: function (tooltipItem) {
-                const label = tooltipItem.label;
+              label: (tooltipItem) => {
                 const value = tooltipItem.raw;
-                return `${label}: ${value.toFixed(2)} g`;
+                return `${tooltipItem.label}: ${value} g`;
               }
             }
+          },
+          legend: {
+            position: 'top',
           }
         },
-        rotation: Math.PI / 4, // Creates a 3D-like effect by rotating the chart
         animation: {
           animateRotate: true,
           animateScale: true
@@ -247,6 +285,19 @@
         data: chartData,
         options: options
       });
+
+      logFood(foodName, selectedServing);
+    }
+
+    function logFood(foodName, selectedServing) {
+      const currentTime = new Date().toLocaleString();
+      const logRow = foodLogTable.insertRow();
+      logRow.innerHTML = `
+        <td>${foodName}</td>
+        <td>${selectedServing} serving(s)</td>
+        <td>${nutritionData.calories} kcal</td>
+        <td>${currentTime}</td>
+      `;
     }
 
     searchBtn.addEventListener('click', async () => {
@@ -256,7 +307,6 @@
         displayFoodList(foodData.hints);
       }
     });
-
   </script>
 
 </body>
